feat: add routes for artists
